# oak

./: CMakeLists.txt  README.md
cmake/: FindPixman.cmake  FindWaylandProtocols.cmake  FindWaylandScanner.cmake  FindWlroots.cmake  FindXkbCommon.cmake  Wayland.cmake
include/: input.h  output.h  server.h  view.h
src/: input.c  main.c  output.c  view.c
